YH-581: fix sidBar on mobile (#320)

--- a/src/shared/ui/Drawer/ui/Drawer.module.css
+++ b/src/shared/ui/Drawer/ui/Drawer.module.css
@@ -23,7 +23,7 @@
 }
 
 .drawer.left {
-  top: 0;
+  bottom: 0;
   left: 0;
   transform: translateX(-100%);
 }
@@ -33,8 +33,8 @@
 }
 
 .drawer.right {
-  top: 0;
   right: 0;
+  bottom: 0;
   transform: translateX(100%);
 }
 
